[Fixes #159714326] remove extra spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Didact+Gothic');
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -61,9 +63,9 @@ a {
 }
 
 .nav {
-  margin: 0;
+  margin: 0 auto;
   background: #ECEFF1;
-  padding: 0;
+  padding: 5px 0;
   border-top: 3px solid #e67e22;
   border-bottom: 1px solid #ECEFF1;
   clear: both;
@@ -71,15 +73,11 @@ a {
 
 .nav-menu .nav-menu-item {
   display: inline-block;
-  margin: 0;
+  margin: 12px 0;
 }
 
 .nav-menu .nav-menu-item a {
   padding: 5px 15px;
-}
-
-.nav-menu .nav-menu-item a > .button {
-  background: #dfe6e9;
 }
 
 .content {
@@ -111,11 +109,16 @@ a {
 
 .band{
   background: #2980b9;
-  padding: 5px 0;
+  padding: 20px 0;
   color: #fff;
 }
 
-.column-middle {
+.profile-flex-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.profile-flex-container > .column-middle {
   flex: 2;
 }
 
@@ -127,14 +130,14 @@ a {
   width: 100%;
   display: block;
   padding: 10px 15px;
-  margin-top: 8px;
+  margin-top: 2px;
   color: #718093;
   border: 1px solid #2980b9;
 }
 .button-search{
   width: auto;
   padding: 10px 15px;
-  margin-top: 8px;
+  margin-top: 2px;
   color: #fff;
   background: #2980b9;
   border: 1px solid #2980b9;
